--- a/JavaSE/3.java程序运行机制.md
+++ b/JavaSE/3.java程序运行机制.md
@@ -20,6 +20,6 @@
 
 执行java命令的过程就是解释。
 
-## 一次编译，到处运行的解释  
+## 一次编译，到处运行
 
 执行javac的过程就是一次编译，生成的.class文件是可以到处运行的，但是这个`到处` 是有隐含条件的，是指装有`JVM`虚拟机的操作系统，因为java实现了不同平台的JVM版本，所以可以做到`“到处”`，切莫被文字游戏困扰。
