--- a/JavaSE/1.JDK,JRE,JVM.md
+++ b/JavaSE/1.JDK,JRE,JVM.md
@@ -1,5 +1,7 @@
 JDK > JRE > JVM
 
-JDK: 在JRE的基础之上扩充了一些开发工具，如果要开发java程序，必须安装JDK，像编译java代码的javac就包含在JDK中。
-JRE: 提供java运行时环境，只要安装了JRE，就可以运行java程序了。
-JVM: java虚拟机，负责将java的代码编译成字节码，java的跨平台，核心就是使用了JVM。
+JDK: 在JRE的基础之上扩充了一些开发工具，如javac.exe javadoc.exe ,如果要开发java程序，必须安装JDK。 
+
+JRE: 提供java运行时环境，只要安装了JRE，就可以运行java程序了, 如内部包含java.exe。  
+
+JVM: java虚拟机，负责将java字节码文件翻译成CPU可以执行的机器码，java的跨平台，核心就是使用了JVM。  
