--- a/JavaSE/5.多线程/3.线程同步.md
+++ b/JavaSE/5.多线程/3.线程同步.md
@@ -73,7 +73,7 @@ public class ThreadTest extends Thread {
     // public synchronized void show(){}
   
     // 正确的方式，必须使用static，此时的锁对象为ThreadTest.class
-    public synchronized void show(){}
+    public synchronized static void show(){}
 }
 ```
 
